force-app/main/default/objects/Opportunity/fields/SDO_Sales_Competition__c.field-meta.xml
<CustomField>
    <fullName>SDO_Sales_Competition__c</fullName>
    <description>What: Used for deal registration.</description>
    <label>Competition</label>
    <length>80</length>
    <type>Text</type>
</CustomField>