force-app/main/default/objects/Opportunity/fields/sse_Competitive_Team_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>sse_Competitive_Team_Follow_Up__c</fullName>
    <description>populated thru the sse_ sales screen flow. will be stamped either yes or no.</description>
    <inlineHelpText>Value of question from screen flow</inlineHelpText>
    <label>Competitive Team Follow Up?</label>
    <length>3</length>
    <type>Text</type>
</CustomField>