force-app/main/default/objects/Opportunity/fields/sse_Deal_Roadblocks__c.field-meta.xml
<CustomField>
    <fullName>sse_Deal_Roadblocks__c</fullName>
    <description>Populated thru slack screen flow</description>
    <inlineHelpText>Where did we experience friction?</inlineHelpText>
    <label>Deal Roadblocks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>