force-app/main/default/objects/Opportunity/fields/sse_Deal_Strategy__c.field-meta.xml
<CustomField>
    <fullName>sse_Deal_Strategy__c</fullName>
    <description>Populated thru slack screen flow</description>
    <inlineHelpText>How did we win this deal?</inlineHelpText>
    <label>Deal Strategy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>