force-app/main/default/objects/Opportunity/fields/sse_Opportunity_Close_Flow_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>sse_Opportunity_Close_Flow_Timestamp__c</fullName>
    <description>Stamped in the flow to gain flexibility in criteria/testing/re-entry</description>
    <label>Opportunity Close Flow Timestamp</label>
    <type>DateTime</type>
</CustomField>